# RD-Agent

./: .env.example  .gitignore  ANALOG_DERIVATIVES_RESEARCH.md  ANALOG_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE_REFACTOR_PLAN.md  CLAUDE.md  CLOUD_QUICKSTART.md  CODEBASE_REVIEW_REPORT.md  CURRENT_STATUS.md  DEPLOYMENT_GUIDE.md  DOCKER_REMOVAL_ANALYSIS.md  Dockerfile  EMPIRICAL_VALIDATION_REPORT.md  FRACTAL_SEMANTIC_VALUE_PROPOSITION.md  FRONTIER_RESEARCH_SUMMARY.md  HCAN_NEURAL_ARCHITECTURE_SUMMARY.md  LAUNCH_PLAN.md  LEVEL5_PRODUCTION_READY.md  LEVEL5_PSI_IMPLEMENTATION_SUMMARY.md  MONETIZATION_STRATEGY.md  Makefile  NEW_REPO_SETUP_INSTRUCTIONS.md  PARALLEL_TRAINING_FINAL_RESULTS.md  PHASE1_COMPLETION_REPORT.md  PHASE2_VALIDATION_REPORT.md  PHASE3_FEATURE_EXTRACTION_REPORT.md  PRODUCTION_READINESS_ASSESSMENT.md  PROFIT_RESEARCH_SUMMARY.md  PTS_IMPLEMENTATION_SUMMARY.md  QUANTUM_CONSCIOUSNESS_APPROACH.md  RD-AGENT-CODEBASE-OVERVIEW.md  README.md  REMOTE_VIEWING_EXPERIMENT_GUIDE.md  REVOLUTIONARY_PARADIGM_SHIFT.md  RV_Demo_2025_results.json  RV_Full_1000_results.json  SECURITY_AUDIT_REPORT.md  SEED_MODEL_IMPLEMENTATION_PLAN.md  SEMANTIC_SPACE_APPROACH.md  SESSION_SUMMARY_LEVEL5.md  (+96 more)
checkpoints_extended/: training_history.json
constraints/: 3.10.txt
rdagent/app/: cli.py
rdagent/app/CI/: run.py
rdagent/app/data_science/: conf.py  debug.py  loop.py
rdagent/app/discorl/: __init__.py  loop.py
rdagent/app/general_model/: general_model.py
rdagent/app/kaggle/: conf.py  loop.py
rdagent/app/qlib_rd_loop/: conf.py  factor.py  factor_from_report.py  model.py  quant.py
rdagent/app/utils/: ape.py  docker_cleanup_cli.py  health_check.py  info.py  ws.py
rdagent/components/agent/: base.py
rdagent/components/benchmark/: conf.py  eval_method.py
rdagent/components/knowledge_management/: graph.py  vector_base.py
rdagent/components/loader/: task_loader.py
rdagent/components/poetiq/: __init__.py  conf.py  early_exit.py  exploration.py  feedback.py  selection.py  trajectory.py
rdagent/components/proposal/: __init__.py
rdagent/components/workflow/: rd_loop.py
rdagent/core/: evolving_agent.py  experiment.py  proposal.py  utils.py
rdagent/log/: base.py  conf.py  logger.py  mle_summary.py  storage.py  timer.py
rdagent/log/server/: app.py  debug_app.py
rdagent/log/ui/: aide.py  app.py  conf.py  (+10 more)
rdagent/oai/: llm_conf.py  llm_utils.py
rdagent/utils/: __init__.py  docker_cleanup.py  env.py
rdagent_lab/: __init__.py
rdagent_lab/analytics/: __init__.py  metrics.py
rdagent_lab/cli/: __init__.py  backtest.py  live.py  research.py  train.py
rdagent_lab/core/: __init__.py  base.py  exceptions.py  registry.py
rdagent_lab/data/: __init__.py  alpaca_collector.py  format_converter.py
rdagent_lab/models/: __init__.py
rdagent_lab/research/: __init__.py  monte_carlo.py  rdagent_adapter.py  scenario_generator.py  symplectic_templates.py
rdagent_lab/services/: __init__.py  backtest.py  training.py
rdagent_lab/utils/: __init__.py  data_extraction.py
requirements/: backtest.txt  live.txt  quant_lab.txt  rl.txt  simulation.txt
test/lab/: __init__.py  conftest.py
test/pitfall_detector/: __init__.py  test_corrector.py  test_diagnostics.py  test_integration.py  test_knowledge_bridge.py  test_linter.py
test/poetiq/: __init__.py  test_early_exit.py  test_feedback.py  test_selection.py
test/qlib/: test_seed_model.py
(+193 files in other folders)
